Added finding expression level with tests Added expression paren simplifier with tests Added expression tree generation without tests yet Added GUI for importing boolean expressions